# langchain-course

./: README.md
simple-rag/: pyproject.toml
simple-rag/app/: main.py
simple-rag/app/docs/: text.txt
simple-rag/app/prompts/: AI_assistant.md
