[project]
name = "simple-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langchain>=0.3.18",
  "langchain-chroma>=0.2.2",
  "langchain-community>=0.3.17",
  "langchain-core>=0.3.35",
  "langchain-ollama>=0.2.3",
  "langchain-text-splitters>=0.3.6",
  "ruff>=0.9.6",
]
